# wotoplatform-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi_release.yml
tests/: __init__.py  config.sample.ini  myconfig.py  test_client.py
wotoplatform/: __init__.py  tools.py
wotoplatform/types/: __init__.py  clientBase.py  groupsData.py  permissions.py  scaffold.py  usersData.py  versionData.py
wotoplatform/types/base_types/: scaffold.py
wotoplatform/types/data_types/: __init__.py  groups_data.py  users_data.py  version_data.py
wotoplatform/types/errors/: __init__.py  clientErrors.py  client_errors.py  general.py  parser.py  serverErrors.py  server_errors.py
wotoplatform/types/wotoCrypto/: __init__.py  common.py
wotoplatform/types/woto_crypto/: common.py  password_container.py
wotoplatform/utils/: __init__.py  wotoSocket.py  woto_socket.py
wotoplatform/utils/woto_crypto/: __init__.py  common.py  password_container.py
