[tool.poetry]
name = "wotoplatform"
version = "0.0.24"
description = ""
authors = ["AliWoto <woto@kaizoku.cyou>"]
packages = [
    { include = "wotoplatform" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
readme = "README.md"
keywords = ["api"]
homepage = "https://github.com/ALiwoto/wotoplatform-Py"

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = ">=1.8.2"
pysocks= ">=1.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
